kubernetes/main/apps/media/qbittorrent/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbittorrent
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: sonarr
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: radarr
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: qui
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: qbittorrent-exporter
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # incoming peers; QBT_TORRENTING_PORT rotates, so no port pin
    - fromEntities:
        - world
  egress:
    # peers/trackers on arbitrary ports; dnsdist sidecar upstreams
    - toEntities: ["world"]
